Artifacts while unhiding part of mesh while dyntopo #40997

Closed
opened 2014-07-09 00:52:18 +02:00 by PawelP · 8 comments

System Information
PC: Win 7 x64, HD5830
Laptop: Win7 x64, Intel 4000

Blender Version
Broken: 2.70+
Worked: 2.69

Short description of error
While, i'm unhiding part of hidden mesh of object that have been sculpted in dyntopo, mesh artifacts are occurring.

Unhiding entire mesh works fine.

Exact steps for others to reproduce the error

  • enable dyntopo
  • hide mesh (H)
  • make some brushes
  • unhide only part of hidden mesh (artifacts occur)

Example

**System Information** PC: Win 7 x64, HD5830 Laptop: Win7 x64, Intel 4000 **Blender Version** Broken: 2.70+ Worked: 2.69 **Short description of error** While, i'm unhiding **part** of hidden mesh of object that have been sculpted in dyntopo, mesh artifacts are occurring. Unhiding entire mesh works fine. **Exact steps for others to reproduce the error** - enable dyntopo - hide mesh (H) - make some brushes - unhide only part of hidden mesh (artifacts occur) [Example ](https://www.youtube.com/watch?v=aJIspS27_5c)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Zuorion-4

Added subscriber: @Zuorion-4
Antonis Ryakiotakis was assigned by Sergey Sharybin 2014-07-09 09:38:09 +02:00

Added subscribers: @Psy-Fi, @Sergey

Added subscribers: @Psy-Fi, @Sergey

@Psy-Fi, mind having a look here?

@Psy-Fi, mind having a look here?

Yep, It's flag flushing, I'll take a look for sure

Yep, It's flag flushing, I'll take a look for sure

This issue was referenced by f5caab2cf7

This issue was referenced by f5caab2cf7f19c79f57ac0e3c2900943ac06af45

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit f5caab2cf7.

Closed by commit f5caab2cf7.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40997
No description provided.