Fix T40997, artifacts when unhiding part of the mesh in dyntopo.

Tagging a face as hidden should not be done only when hiding.